unpackaged/pre/first/objects/Church__c.object
<CustomObject>
    <fields>
        <fullName>Church_Network__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Church Network</label>
        <referenceTo>Church_Network__c</referenceTo>
        <relationshipLabel>Churches</relationshipLabel>
        <relationshipName>Churches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <label>Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denomination_Subgroup__c</fullName>
        <label>Denomination Subgroup</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Denomination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>ARP</fullName>
                </value>
                <value>
                    <fullName>Association of Evangelical Gospel Assemblies</fullName>
                </value>
                <value>
                    <fullName>Disciples of Christ</fullName>
                </value>
                <value>
                    <fullName>EFCA</fullName>
                </value>
                <value>
                    <fullName>ELCA</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Evangelical</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>LCMS</fullName>
                </value>
                <value>
                    <fullName>Missionary</fullName>
                </value>
                <value>
                    <fullName>Missouri Synod</fullName>
                </value>
                <value>
                    <fullName>Nondenominational</fullName>
                </value>
                <value>
                    <fullName>PCA</fullName>
                </value>
                <value>
                    <fullName>PCUSA</fullName>
                </value>
                <value>
                    <fullName>Presbytery of the New Covenant</fullName>
                </value>
                <value>
                    <fullName>Reformed Episcopal Church</fullName>
                </value>
                <value>
                    <fullName>SBC</fullName>
                </value>
                <value>
                    <fullName>UMC</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <label>Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AME</fullName>
                </value>
                <value>
                    <fullName>Anglican</fullName>
                </value>
                <value>
                    <fullName>Apostolic</fullName>
                </value>
                <value>
                    <fullName>Assembly of God</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Brethren</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Christian Church</fullName>
                </value>
                <value>
                    <fullName>Christian Orthodox</fullName>
                </value>
                <value>
                    <fullName>Christian Reformed</fullName>
                </value>
                <value>
                    <fullName>Church of Christ</fullName>
                </value>
                <value>
                    <fullName>Church of God</fullName>
                </value>
                <value>
                    <fullName>Church of South India</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>COGIC</fullName>
                </value>
                <value>
                    <fullName>Disciples of Christ</fullName>
                </value>
                <value>
                    <fullName>ECFA</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Evangelical Free</fullName>
                </value>
                <value>
                    <fullName>Friends Church</fullName>
                </value>
                <value>
                    <fullName>Greek Orthodox</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Mennonite</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>Nazarene</fullName>
                </value>
                <value>
                    <fullName>Nondenominational</fullName>
                </value>
                <value>
                    <fullName>Pentecostal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Errors__c</fullName>
        <label>Email Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <label>Mailing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Partnership_Activities__c</fullName>
        <label>Other Partnership Activities</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Activities__c</fullName>
        <label>Partnership Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After-School Programs</fullName>
                </value>
                <value>
                    <fullName>Book Drives</fullName>
                </value>
                <value>
                    <fullName>Christmas Gifts</fullName>
                </value>
                <value>
                    <fullName>Clothing Drives</fullName>
                </value>
                <value>
                    <fullName>College Prep Assistance</fullName>
                </value>
                <value>
                    <fullName>Communities in Service</fullName>
                </value>
                <value>
                    <fullName>ESL Training</fullName>
                </value>
                <value>
                    <fullName>Facilities Usage</fullName>
                </value>
                <value>
                    <fullName>Field Trips/Internships</fullName>
                </value>
                <value>
                    <fullName>Financial Support</fullName>
                </value>
                <value>
                    <fullName>Food Drives</fullName>
                </value>
                <value>
                    <fullName>GED Support</fullName>
                </value>
                <value>
                    <fullName>Guest Speakers</fullName>
                </value>
                <value>
                    <fullName>In-Kind Donations</fullName>
                </value>
                <value>
                    <fullName>Kids Hope Mentoring</fullName>
                </value>
                <value>
                    <fullName>Literacy Help</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Parent Engagement &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Prayer</fullName>
                </value>
                <value>
                    <fullName>PTO Support</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Student Ministry</fullName>
                </value>
                <value>
                    <fullName>Teacher Support &amp; Appreciation</fullName>
                </value>
                <value>
                    <fullName>Tutoring</fullName>
                </value>
                <value>
                    <fullName>WatchDogs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pastor__c</fullName>
        <label>Pastor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Languages__c</fullName>
        <label>Service Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;TX&quot;</defaultValue>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <label>Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Church</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Common_Name__c</columns>
        <columns>Church_Network__c</columns>
        <columns>Denomination__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Pastor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Churches_with_Partnerships</fullName>
        <columns>NAME</columns>
        <columns>Common_Name__c</columns>
        <columns>Church_Network__c</columns>
        <columns>Denomination__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Pastor__c</columns>
        <columns>Partnership_Activities__c</columns>
        <filterScope>Everything</filterScope>
        <label>Churches with Partnerships</label>
    </listViews>
    <nameField>
        <label>Church Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Churches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>